<resources>
    <string name="app_name">Outdoorplanner</string>
    <string name="title_home">Home</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_weather">Weather</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>

    <!-- Settings -->
    <string name="setting_common_header">Common</string>

    <string name="setting_calendar_header">Calendar</string>
        <string name="setting_dateFormat">Date Format</string>

    <string name="setting_weather_header">Weather</string>
        <string name="setting_temperatureUnit">Temperature Unit</string>
        <string name="setting_windSpeedUnit">Wind Speed Unit</string>
        <string name="setting_precipitationUnit">Precipitation Unit</string>


    <string name="setting_additional_header">Additional</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>