<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:fragment="SettingsFragment">

    <PreferenceCategory app:title="@string/setting_common_header">
        <Preference></Preference>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/setting_calendar_header">

        <ListPreference
            app:key="dateFormat_setting"
            app:title="@string/setting_dateFormat"
            app:entries="@array/setting_dateFormat_entries"
            app:entryValues="@array/setting_dateFormat_values"
            app:defaultValue="dd.mm.yyyy"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/setting_weather_header">

        <ListPreference
            app:key="temperatureUnit_setting"
            app:title="@string/setting_temperatureUnit"
            app:entries="@array/setting_temperatureUnit_entries"
            app:entryValues="@array/setting_temperatureUnit_values"
            app:defaultValue="c"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="windSpeedUnit_setting"
            app:title="@string/setting_windSpeedUnit"
            app:entries="@array/setting_windSpeedUnit_entries"
            app:entryValues="@array/setting_windSpeedUnit_values"
            app:defaultValue="kmh"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="precipitationUnit_setting"
            app:title="@string/setting_precipitationUnit"
            app:entries="@array/setting_precipitationUnit_entries"
            app:entryValues="@array/setting_precipitationUnit_values"
            app:defaultValue="mm"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>